# lambdaguard

./: LICENSE.md  LICENSE.txt  LambdaGuard_algo.py  README.md  example.py  pyproject.toml  requirements.txt  setup.py
lambdaguard/: __init__.py  cusum.py  lambdaguard.py  ofi.py  opi.py
notebooks/: λ-based_early_stopping.ipynb
test/: test_cusum.py
