[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambdaguard"
version = "0.1.0"
description = "Overfitting detection for Gradient Boosting models using λ-Guard methodology."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name="Fabrizio Di Sciorio, PhD", email="fabriziodisciorio91@gmail.com"}
]
keywords = ["machine-learning", "gradient-boosting", "overfitting", "boosting", "lambda-guard"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.26,<2.2",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.3,<2.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.12,<0.14",
    "xgboost>=1.7,<4.0",
    "lightgbm>=4.4,<5.0",
    "catboost>=1.1,<2.0"
]

[project.urls]
Homepage = "https://github.com/faberBI/lambdaguard"
Documentation = "https://github.com/faberBI/lambdaguard"
BugTracker = "https://github.com/faberBI/lambdaguard/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["notebooks*", "tests*", "docs*"]
